# magic_hat

./: CMakeLists.txt  README.md  package.xml
launch/: magic_hat.launch
msg/: TurtleInfo.msg
scripts/: hat.py
src/: subscriber.cpp
