<?xml version="1.0"?>
<package format="2">
  <name>magic_hat</name>
  <version>0.0.0</version>
  <description>The magic_hat package</description>

  <maintainer email="jcherubino@gmail.com">jcherubino</maintainer>

  <license>BSD</license>

  <author>Josh Cherubino</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
